--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,32 @@
         <a href="#" class="about__button">Sing up now</a>
       </div>
     </section>
+    <section class="relations">
+      <h2 class="relations__header">
+        Let's get acquainted
+      </h2>
+      <div class="relations__info">
+        <img class="relations__img" src="./img/man.png" alt="man">
+        <div class="relations__text">
+          <h3 class="relations__title">
+            I am cool frontend developer
+          </h3>
+          <p class="relations__paragraph">
+            We will evaluate how clean your 
+            approach to writing CSS and Javascript code is. You can use any 
+            CSS and Javascript 3rd party libraries without any restriction.
+          </p>
+          <p class="relations__paragraph">
+            If 3rd party css/javascript libraries are added to the 
+            project via bower/npm/yarn you will get bonus points. If 
+            you use any task runner (gulp/webpack) you will get bonus 
+            points as well. Slice service directory page P​SD mockup​ 
+            into HTML5/CSS3. 
+          </p>
+          <a href="#" class="relations__link">Sing up now</a>
+        </div>
+      </div>
+    </section>
     <div id="root"></div>
   </body>
 </html>
