--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
       <nav class="header__nav">
         <ul class="nav">
           <li class="nav__item">
-            <a href="#" class="nav__link">About me</a>
+            <a href="#about" class="nav__link">About me</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Relationships</a>
+            <a href="#relations" class="nav__link">Relationships</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Requirements</a>
@@ -33,7 +33,7 @@
         </ul>
       </nav>
     </header>
-    <section class="about">
+    <section class="about" id="about">
       <div class="about__info">
         <h1 class="about__title">Test assignment 
           for Frontend Developer position
@@ -49,7 +49,7 @@
         <a href="#" class="about__button">Sing up now</a>
       </div>
     </section>
-    <section class="relations">
+    <section class="relations" id="relations">
       <h2 class="relations__header">
         Let's get acquainted
       </h2>
